<resources>
    <string name="app_name">Platzi</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="txt_btn_login">Iniciar Sesion</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">, crea una cuenta aquí</string>
    <string name="hint_email">correo electronico</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_pass">Confirmar Password</string>
    <string name="txt_btn_join">Únete</string>
    <string name="toolbar_tittle_createAccount">Crear Cuenta</string>
    <string name="description">pass</string>
    <string name="usernameCard">Uriel Ramirez</string>
    <string name="firstword_Card">hace</string>
    <string name="timeCard">4 dias</string>
    <string name="likenumbercard_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
