<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
<!--con framelayout todos los elementos se acomodan encima uno de otros-->
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/pictureCard"
        android:background="@drawable/paisaje1"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="@dimen/height_cardview"
        android:transitionName="@string/transitionname_picture"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/backGroundtext_card"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/usernameCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameCard"
            android:textColor="@color/EditTextWhite"
            android:textSize="@dimen/textsize_username_card"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/firstword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstword_Card"
                android:textSize="@dimen/firstword_textsize_card"
                android:textColor="@color/EditTextWhite"/>
            <TextView
                android:id="@+id/timeCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeCard"
                android:textSize="@dimen/firstword_textsize_card"
                android:textColor="@color/EditTextWhite"
                android:layout_marginLeft="@dimen/timecard_marginleft_card"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/like_margintop_card"
            >
            <CheckBox
                android:id="@+id/likeCheckCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_select"
                />
            <TextView
                android:id="@+id/likeNumberCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likenumbercard_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstword_textsize_card"
                android:layout_marginLeft="@dimen/timecard_marginleft_card"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</android.support.v7.widget.CardView>