<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary">
    <!--tools:context=".LoginActivity" ES PARA DECIR CUAL ES LA REFERENCIA
    DE JAVA-->

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"/>
        </RelativeLayout>

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="0.4"
           android:fillViewport="true">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="@dimen/padding_horizontal_login">

               <!--Esta libreria es de material design-->
               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:theme="@style/EditTextWhite">
                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/edit_txt_username"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/hint_username"
                       android:imeOptions="actionDone"
                       android:inputType="text"
                      />
               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   app:passwordToggleEnabled = "true"
                   android:theme="@style/EditTextWhite">

                   <android.support.design.widget.TextInputEditText
                       android:id="@+id/edit_txt_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/hint_password"
                       android:inputType="textPassword"/>
               </android.support.design.widget.TextInputLayout>

               <Button
                   android:id="@+id/btn_login"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/txt_btn_login"
                   android:theme="@style/RaisedbuttonDark"/>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center">

                   <TextView
                       android:id="@+id/txt_dontHaveAccount"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/dont_have_account"
                       android:textColor="@color/EditTextWhite"
                       android:textStyle="bold"
                       android:textSize="@dimen/txt_dontHaveAccount"/>
                    <TextView
                        android:id="@+id/txt_CreateHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_here"
                        android:textColor="@color/EditTextWhite"
                        android:textStyle="bold"
                        android:textSize="@dimen/txt_dontHaveAccount"
                        android:layout_toRightOf="@id/txt_dontHaveAccount"/>
               </RelativeLayout>
           </LinearLayout>

       </ScrollView>

   </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


